@@ -2,6 +2,8 @@
 7.88  2018-07-08
   - Improved default request ids generated by Mojo::Message::Request to be a
     little more unique.
+  - Fixed a bug where prefork tests would fail if a prefork server was already
+    running.
 
 7.87  2018-07-04
   - Added optional support for Cpanel::JSON::XS to Mojo::JSON for much better
